@@ -1,3 +1,9 @@
+2008-12-28  Mirco Bauer <meebey@meebey.net> 
+
+	* Chats/ChatModel.cs: Implemented remembering last seen highlight in chats,
+	  so frontends will not re-highlight when re-attaching. (closes trac
+	  ticket #97)
+
 2008-12-26  Mirco Bauer <meebey@meebey.net> 
 
 	
